deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: moslik/kpalch-django:latest
        command: ["python", "manage.py", "runserver", "0.0.0.0:8090"]
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
#  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db

---
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: NodePort
  ports:
  - port: 8090
    targetPort: 8090
    nodePort: 30080  # Порт, на котором будет доступно ваше приложение
  selector:
    app: my-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: "traefik"
  rules:
  - host: kpalch.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 8090
